--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -307,6 +307,7 @@ jobs:
         if: matrix.install-kind == true && runner.os != 'Windows'
         uses: engineerd/setup-kind@v0.6.2
         with:
+          name: ${{ github.run_id }}
           version: v0.24.0
           image: kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
 
