--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -14,9 +14,9 @@ builds:
     binary: devpod
 
   - id: devpod-linux
-    # hooks:
-    #   pre:
-    #     - sh -c 'go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic'
+    hooks:
+      pre:
+        - sh -c 'go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic'
     goos: [linux]
     goarch: [amd64, arm64]
     binary: devpod-{{ .Os }}-{{ .Arch }}
@@ -26,9 +26,9 @@ builds:
       - CGO_ENABLED=0
 
   - id: devpod-darwin
-    # hooks:
-    #   pre:
-    #     - sh -c 'go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic'
+    hooks:
+      pre:
+        - sh -c 'go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic'
     goos: [darwin]
     goarch: [amd64, arm64]
     binary: devpod-{{ .Os }}-{{ .Arch }}
