--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -323,12 +323,20 @@ jobs:
             ls -R ./bin/
           fi
 
+      - name: generate uuid
+        id: uuid
+        uses: actions/github-script@v8
+        with:
+          script: |
+            const { v4: uuidv4 } = require('uuid');
+            return uuidv4();
+
       # NOTE: engineerd/setup-kind does not work on Windows runners
       - name: setup kind
         if: matrix.install-kind == true && runner.os != 'Windows'
         uses: engineerd/setup-kind@v0.6.2
         with:
-          name: kind-${{ github.run_id }}-${{ github.run_attempt }}-${{ matrix.label }}
+          name: ${{ steps.uuid.outputs.result }}
           version: v0.24.0
           image: kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
           skipClusterLogsExport: true
