fixup!: install uuid package
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -323,6 +323,14 @@ jobs:
             ls -R ./bin/
           fi
 
+      - name: setup Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: "latest"
+
+      - name: install uuid package
+        run: npm install uuid
+
       - name: generate uuid
         id: uuid
         uses: actions/github-script@v8
