fixup!: install kind for provider
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -173,7 +173,7 @@ jobs:
           - label: provider
             runner: ubuntu-latest
             free-disk-space: false
-            install-kind: false
+            install-kind: true
             needs-github-token: false
 
           - label: ssh
@@ -324,6 +324,7 @@ jobs:
           fi
 
       - name: generate uuid
+        if: matrix.install-kind == true && runner.os != 'Windows'
         id: uuid
         shell: bash
         run: |
