fixup!: setup kind for windows provider label
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -263,7 +263,7 @@ jobs:
           - label: provider
             runner: windows-latest
             free-disk-space: false
-            install-kind: false
+            install-kind: true
             needs-github-token: false
 
           - label: docker-install
