--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -383,7 +383,9 @@ jobs:
       - name: setup kind (Windows)
         if: matrix.install-kind == true && runner.os == 'Windows'
         shell: bash
-        run: choco install kind && kind create cluster --name "${{ steps.uuid.outputs.result }}" --image kindest/node
+        run: |
+          wsl --set-default-version 2
+          choco install kind && kind create cluster --name "${{ steps.uuid.outputs.result }}" --image kindest/node
 
       # NOTE: engineerd/setup-kind does not work on Windows runners
       - name: setup kind
