fixup!: try switch engine before start
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -19,6 +19,12 @@ jobs:
       - name: Debug Docker startup
         shell: powershell
         run: |
+          Write-Host "Listing WSL distros..."
+          docker desktop engine ls
+
+          Write-Host "Switching to Linux engine..."
+          docker desktop engine linux
+
           Write-Host "Starting Docker Desktop..."
           docker desktop start
 
