fixup!: podman-cli install
Signed-off-by: Samuel K <69881238+skevetter@users.noreply.github.com>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -31,7 +31,7 @@ jobs:
           wsl --set-default-version 2
           # Install Podman and Kind
           # choco install podman-desktop kind -y
-          choco install -y kind
+          choco install -y podman-cli kind
 
           # Start Podman machine
           podman machine init
